--- a/webapps/jsp/header.html
+++ b/webapps/jsp/header.html
@@ -50,8 +50,9 @@ ul#nav li a:hover {
 </head>
 <body>
 	<ul id="nav">
-		<li><a href="/logout"  target="content">退出登录</a></li>
-		<li><a href="/user/index" target="_content">用户管理页面</a></li>
+		<li><a href="/logout"  target="_content">退出登录</a></li>
+		<!-- <li><a href="/user/index" target="_content">用户管理页面</a></li>   -->
+		<li><a href="/user/changepassword" target="_content">修改密码</a></li>
 		<li><a href="/item/index" target="_content">设备材料管理页面</a></li>
 		<li><a href="/itemplan/index" target="_content">每月计划录入</a></li>
 		<li><a href="/account/index" target="_content">增加出入库信息</a></li>
